--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,93 +1,11 @@
 {
     "configurations": [
         {
-            "name": "C/C++: g++.exe 生成和调试活动文件",
-            "type": "cppdbg",
+            "type": "java",
+            "name": "Hello",
             "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "D:\\Program Files\\msys64\\mingw64\\bin\\gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "为 gdb 启用整齐打印",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "将反汇编风格设置为 Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: g++.exe 生成活动文件"
-        },
-        {
-            "name": "(Windows) 启动",
-            "type": "cppvsdbg",
-            "request": "launch",
-            "program": "输入程序名称，例如 ${workspaceFolder}/a.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "console": "externalTerminal"
-        },
-        {
-            "name": "C/C++: cpp.exe 生成和调试活动文件",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "D:\\Program Files\\msys64\\mingw64\\bin\\gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "为 gdb 启用整齐打印",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "将反汇编风格设置为 Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: cpp.exe 生成活动文件"
-        },
-        {
-            "name": "C/C++: gcc.exe 生成和调试活动文件",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "D:\\Program Files\\msys64\\mingw64\\bin\\gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "为 gdb 启用整齐打印",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "将反汇编风格设置为 Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: gcc.exe 生成活动文件"
+            "mainClass": "Hello",
+            "projectName": "Code-Exercise_b13b5a33"
         },
         {
             "name": "C/C++: gcc 生成和调试活动文件",
@@ -112,9 +30,18 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: gcc 生成活动文件",
-            "miDebuggerPath": "/usr/bin/gdb"
+            "linux": {
+                "preLaunchTask": "C/C++: gcc 生成活动文件",
+                "miDebuggerPath": "/usr/bin/gdb"
+            },
+            "windows": {
+                "preLaunchTask": "C/C++: gcc.exe 生成活动文件",
+                "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe"
+            },
+            "osx": {
+                "preLaunchTask": "C/C++: gcc 生成活动文件",
+                "miDebuggerPath": "/usr/bin/gdb"
+            }
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
