--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 生成活动文件",
-            "command": "D:\\Program Files\\msys64\\mingw64\\bin\\g++.exe",
+            "command": "C:\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -23,7 +23,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: cpp.exe 生成活动文件",
-            "command": "D:\\Program Files\\msys64\\mingw64\\bin\\cpp.exe",
+            "command": "C:\\msys64\\mingw64\\bin\\cpp.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -43,7 +43,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc.exe 生成活动文件",
-            "command": "D:\\Program Files\\msys64\\mingw64\\bin\\gcc.exe",
+            "command": "C:\\msys64\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
