更新了VSCode配置

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "mainClass": ""
         },
         {
-            "name": "C/C++: gcc 生成和调试活动文件",
+            "name": "C/C++: gcc 生成, gdb 调试活动文件",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}.out",
@@ -16,7 +16,6 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
             "setupCommands": [
                 {
                     "description": "为 gdb 启用整齐打印",
@@ -31,16 +30,38 @@
             ],
             "linux": {
                 "preLaunchTask": "C/C++: gcc 生成活动文件",
-                "miDebuggerPath": "/usr/bin/gdb"
+                "miDebuggerPath": "/usr/bin/gdb",
+                "MIMode": "gdb",
             },
             "windows": {
                 "preLaunchTask": "C/C++: gcc.exe 生成活动文件",
-                "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe"
-            },
-            "osx": {
-                "preLaunchTask": "C/C++: gcc 生成活动文件",
-                "miDebuggerPath": "/usr/bin/gdb"
+                "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+                "MIMode": "gdb",
             }
+        },
+        {
+            "name": "C/C++: gcc 生成, lldb 调试活动文件",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.out",
+            "args": [],
+            "cwd": "${fileDirname}",
+            "preLaunchTask": "C/C++: gcc 生成活动文件",
+            "env": {},
+            "terminal": "integrated",
+            "stopOnEntry": false
+        },
+        {
+            "name": "C/C++: clang++ 生成, lldb 调试活动文件",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.out",
+            "args": [],
+            "cwd": "${fileDirname}",
+            "preLaunchTask": "C/C++: clang++ 生成活动文件",
+            "env": {},
+            "terminal": "integrated",
+            "stopOnEntry": false
         }
     ]
 }
