--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,26 @@
             "detail": "使用gcc来编译当前活动文件",
         },
         {
+            "label": "C/C++: gcc.exe 生成活动文件",
+            "type": "cppbuild",
+            "command": "gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}.out"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "detail": "使用gcc来编译当前活动文件",
+        },
+        {
             "label": "C/C++: clang++ 生成活动文件",
             "type": "cppbuild",
             "command": "clang++",
